// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute market endpoint edge cases should handle unknown market status with status code 0 1`] = `
{
  "data": {
    "category": "Other",
    "close_timestamp": 1748800800,
    "event_ticker": "UNKNOWNEVENT",
    "market_status": 0,
    "market_ticker": "UNKNOWNSTATUSMARKET",
    "no_ask_price": 50,
    "no_bid_price": 50,
    "no_mid_price": 50,
    "open_interest": 10000,
    "result": 0,
    "settlement_flag": 0,
    "updated_at": 1737374400,
    "yes_ask_price": 50,
    "yes_bid_price": 50,
    "yes_mid_price": 50,
  },
  "result": 0,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1737374400000,
  },
}
`;

exports[`execute market endpoint happy path should return success for active market 1`] = `
{
  "data": {
    "category": "Macro",
    "close_timestamp": 1742407200,
    "event_ticker": "USIRATECUTS25",
    "market_status": 1,
    "market_ticker": "KXUSIRATECUTS25MAR",
    "no_ask_price": 52,
    "no_bid_price": 48,
    "no_mid_price": 50,
    "open_interest": 104923,
    "result": 1,
    "settlement_flag": 0,
    "updated_at": 1738112220,
    "yes_ask_price": 52,
    "yes_bid_price": 48,
    "yes_mid_price": 50,
  },
  "result": 1,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1738112220000,
  },
}
`;

exports[`execute market endpoint happy path should return success for closed market 1`] = `
{
  "data": {
    "category": "Politics",
    "close_timestamp": 1736964000,
    "event_ticker": "CLOSEDEVENT",
    "market_status": 2,
    "market_ticker": "CLOSEDMARKET",
    "no_ask_price": 55,
    "no_bid_price": 45,
    "no_mid_price": 50,
    "open_interest": 50000,
    "result": 2,
    "settlement_flag": 0,
    "updated_at": 1736964000,
    "yes_ask_price": 55,
    "yes_bid_price": 45,
    "yes_mid_price": 50,
  },
  "result": 2,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1736964000000,
  },
}
`;

exports[`execute market endpoint happy path should return success for settled market with no result 1`] = `
{
  "data": {
    "category": "Climate",
    "close_timestamp": 1736100000,
    "event_ticker": "SETTLEDEVENT2",
    "market_status": 3,
    "market_ticker": "SETTLEDNOMARKET",
    "no_ask_price": 100,
    "no_bid_price": 100,
    "no_mid_price": 100,
    "open_interest": 60000,
    "result": 3,
    "settlement_flag": 2,
    "updated_at": 1736100600,
    "yes_ask_price": 0,
    "yes_bid_price": 0,
    "yes_mid_price": 0,
  },
  "result": 3,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1736100600000,
  },
}
`;

exports[`execute market endpoint happy path should return success for settled market with yes result 1`] = `
{
  "data": {
    "category": "Economics",
    "close_timestamp": 1736532000,
    "event_ticker": "SETTLEDEVENT",
    "market_status": 3,
    "market_ticker": "SETTLEDYESMARKET",
    "no_ask_price": 0,
    "no_bid_price": 0,
    "no_mid_price": 0,
    "open_interest": 75000,
    "result": 3,
    "settlement_flag": 1,
    "updated_at": 1736532300,
    "yes_ask_price": 100,
    "yes_bid_price": 100,
    "yes_mid_price": 100,
  },
  "result": 3,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1736532300000,
  },
}
`;

exports[`execute market endpoint happy path should use default endpoint when not specified 1`] = `
{
  "data": {
    "category": "Macro",
    "close_timestamp": 1742407200,
    "event_ticker": "USIRATECUTS25",
    "market_status": 1,
    "market_ticker": "KXUSIRATECUTS25MAR",
    "no_ask_price": 52,
    "no_bid_price": 48,
    "no_mid_price": 50,
    "open_interest": 104923,
    "result": 1,
    "settlement_flag": 0,
    "updated_at": 1738112220,
    "yes_ask_price": 52,
    "yes_bid_price": 48,
    "yes_mid_price": 50,
  },
  "result": 1,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1738112220000,
  },
}
`;

exports[`execute market endpoint upstream failures should handle empty response from provider 1`] = `
{
  "errorMessage": "The data provider didn't return any value for EMPTYMARKET",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint upstream failures should handle null market in response 1`] = `
{
  "errorMessage": "The data provider didn't return any value for NULLMARKET",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint upstream failures should handle upstream server error 1`] = `
{
  "errorMessage": "Provider request failed with status 500: {"error":{"code":"internal_error","message":"Internal server error"}}",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint validation errors should fail on empty request 1`] = `
{
  "error": {
    "message": "[Param: market_ticker] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute market endpoint validation errors should fail on invalid endpoint 1`] = `
{
  "error": {
    "message": "Adapter does not have a "invalid_endpoint" endpoint.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 404,
}
`;

exports[`execute market endpoint validation errors should fail on missing market_ticker 1`] = `
{
  "error": {
    "message": "[Param: market_ticker] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;
